Adding a rect to fill out all information in the site, adding shadow, added multiple topics, extended the width of the page, added a background color to the text, and I also rounded the boxes.
TO DO: write about the accomplishments of chandra gupta I

--- a/style.css
+++ b/style.css
@@ -6,3 +6,21 @@ html {
 body {
   font-family: 'Open Sans', sans-serif;
 }
+p {
+  background-color: #d7d6d6;
+  border-radius: 5px;
+  box-shadow: 1px 0px 5px 0px rgba(0,0,0,0.75);
+  width: 90%;
+  margin: auto;
+}
+.question {
+  width: 730px;
+}
+.part1 {
+  width: 100%;
+  height: 1800px;
+  border: 1px solid #000;
+}
+h3 {
+  text-align: center;
+}
