--- a/style.css
+++ b/style.css
@@ -24,3 +24,10 @@ p {
 h3 {
   text-align: center;
 }
+img {
+  width: 200px;
+  margin: auto;
+  border-radius: 100px;
+  box-shadow: 1px 2px 5px 0px rgba(0,0,0,0.75);
+  display: flex;
+}
