--- a/style.css
+++ b/style.css
@@ -31,3 +31,47 @@ img {
   box-shadow: 1px 2px 5px 0px rgba(0,0,0,0.75);
   display: flex;
 }
+nav {
+  border-radius: 10px;
+  width: 500px;
+  background-color: #adadad;
+  display: flex;
+}
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav ul li {
+  display: inline-block;
+  position: relative;
+}
+
+nav ul li a {
+  padding: 10px;
+  text-decoration: none;
+}
+
+nav ul li:hover .submenu {
+  display: block;
+}
+
+nav ul li .submenu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #f2f2f2; /* Set the background color for the submenu */
+  padding: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+nav ul li .submenu li {
+  display: block;
+}
+a {
+  color: black;
+  text-decoration: none;
+}
