--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 html {
   height: 100%;
   width: 100%;
@@ -12,6 +13,9 @@ p {
   box-shadow: 1px 0px 5px 0px rgba(0,0,0,0.75);
   width: 90%;
   margin: auto;
+  font-family: 'Lato', Open Sans, sans-serif;
+  font-weight: 700;
+  font-style: normal;
 }
 .question {
   width: 730px;
