--- a/style.css
+++ b/style.css
@@ -62,10 +62,17 @@ nav ul li:hover .submenu {
 }
 
 nav ul li .submenu {
+  font-family: ;
   display: none;
   position: absolute;
   top: 100%;
   left: 0;
+  width: 280px;
+  font-family: 'Lato', Open Sans, sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  font-style: normal;
+  text-align: center;
   background-color: #f2f2f2; /* Set the background color for the submenu */
   padding: 10px;
   border-bottom-left-radius: 10px;
