--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ p {
   box-shadow: 1px 0px 5px 0px rgba(0,0,0,0.75);
   width: 90%;
   margin: auto;
+  text-align: center;
+  font-size: 20px;
   font-family: 'Lato', Open Sans, sans-serif;
   font-weight: 700;
   font-style: normal;
@@ -88,4 +90,7 @@ a {
 }
 h2 {
   text-align: center;
+}
+h1,h2,h3 {
+  font-size: 30px;
 }
