--- a/style.css
+++ b/style.css
@@ -93,4 +93,24 @@ h2 {
 }
 h1,h2,h3 {
   font-size: 30px;
+  text-align: center;
+}
+video {
+  width: 400px;
+  margin: auto;
+  display: flex;
+  border-radius: 10px;
+  box-shadow: 0px 10px 16px -3px rgba(0,0,0,0.3);
+}
+.fade-in {
+  animation: fadeInAnimation 2s ease forwards;
+  opacity: 0;
+}
+@keyframes fadeInAnimation {
+  from {
+    opacity: 0.5;
+  }
+  to {
+    opacity: 1;
+  }
 }
