--- a/style.css
+++ b/style.css
@@ -38,9 +38,12 @@ img {
   display: flex;
 }
 nav {
-  border-radius: 10px;
-  width: 500px;
+  width: 100%;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
   background-color: #adadad;
+  box-shadow: 1px 2px 5px 0px rgba(0,0,0,0.75);
   display: flex;
 }
 nav ul {
