--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ nav ul li .submenu {
   font-weight: 700;
   font-style: normal;
   text-align: center;
-  background-color: #f2f2f2; /* Set the background color for the submenu */
+  background-color: #525252; /* Set the background color for the submenu */
   padding: 10px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
@@ -88,7 +88,7 @@ nav ul li .submenu li {
   display: block;
 }
 a {
-  color: black;
+  color: white;
   text-decoration: none;
 }
 h2 {
