quick fix to the scroll bar bc i fucked it up by accident
pro coder

--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@ html {
 }
 body {
   font-family: 'Open Sans', sans-serif;
-  overflow: hidden
+}
+body::-webkit-scrollbar {
+  display: none;
 }
 p {
   background-color: #d7d6d6;
