--- a/style.css
+++ b/style.css
@@ -25,10 +25,9 @@ p {
 .question {
   width: 730px;
 }
-.part1 {
-  width: 100%;
-  height: 1800px;
-  border: 1px solid #000;
+.cgi {
+  border-radius: 30px;
+  color: #000000;
 }
 h3 {
   text-align: center;
@@ -42,12 +41,15 @@ img {
 }
 nav {
   width: 100%;
+  height: 50px;
+  border-radius: 30px;
   text-align: center;
   align-items: center;
   justify-content: center;
-  background-color: #adadad;
+  background-color: #E3B842;
   box-shadow: 1px 2px 5px 0px rgba(0,0,0,0.75);
   display: flex;
+  position: sticky;
 }
 nav ul {
   list-style: none;
@@ -102,7 +104,7 @@ h1,h2,h3 {
   text-align: center;
 }
 video {
-  width: 400px;
+  width: 300px;
   margin: auto;
   display: flex;
   border-radius: 10px;
@@ -144,4 +146,12 @@ img {
 .v2 {
   margin: 0 auto;
   float: left;
+}
+.v3 {
+  float: center;
+}
+.v {
+  font-family: 'Lato', sans-serif;
+  font-size: 25px;
+  align-items: center;
 }
