--- a/style.css
+++ b/style.css
@@ -133,12 +133,6 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
-.card-body {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #181b20;
-}
 .v1 {
   margin: auto;
   float: right;
@@ -148,10 +142,23 @@ img {
   float: left;
 }
 .v3 {
-  float: center;
+  margin: auto;
+  float: initial;
 }
 .v {
   font-family: 'Lato', sans-serif;
   font-size: 25px;
   align-items: center;
+}
+h4 {
+  background-color: #E3B842;
+  border-radius: 10px;
+  text-align: center;
+}
+.video-container {
+  border: 4px solid #ccc;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px auto;
+  text-align: center;
 }
