--- a/style.css
+++ b/style.css
@@ -83,10 +83,12 @@ nav ul li .submenu {
   font-weight: 700;
   font-style: normal;
   text-align: center;
-  background-color: #525252; /* Set the background color for the submenu */
+  background-color: #E3B842; /* Set the background color for the submenu */
+  box-shadow: 10px 23px 23px 0px rgba(0,0,0,0.1);
   padding: 10px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  margin-top: 13px;
 }
 
 nav ul li .submenu li {
