--- a/style.css
+++ b/style.css
@@ -11,14 +11,15 @@ body::-webkit-scrollbar {
   display: none;
 }
 p {
-  background-color: #99846c;
+  border: 4px solid #ccc;
+  padding: 10px;
   border-radius: 5px;
   box-shadow: 1px 0px 5px 0px rgba(0,0,0,0.75);
   width: 90%;
   margin: auto;
   text-align: center;
   font-size: 20px;
-  font-family: 'Lato', Open Sans, sans-serif;
+  font-family: 'Open Sans', Lato, sans-serif;
   font-weight: 700;
   font-style: normal;
 }
@@ -124,6 +125,12 @@ video {
   }
 }
 img {
+  display: inline-block;
+  width: 30%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto; 
+  margin-bottom: auto;
   border-radius: 30px;
 }
 .card {
@@ -167,23 +174,10 @@ h4 {
   margin: 10px auto;
   text-align: center;
 }
-.img2 {
-  left: -110%;
-  top: -300px;
-  height: 300px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: auto; 
-  margin-bottom: auto;
-  border-radius: 30px;
-}
-.img3 {
-  left: 110%;
-  top: -600px;
-  height: 300px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: auto; 
-  margin-bottom: auto;
-  border-radius: 30px;
+.card {
+  border: 4px solid #ccc;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px auto;
+  text-align: center;
 }
