--- a/style.css
+++ b/style.css
@@ -33,13 +33,6 @@ p {
 h3 {
   text-align: center;
 }
-img {
-  width: 300px;
-  margin: auto;
-  border-radius: 100px;
-  box-shadow: 1px 2px 5px 0px rgba(0,0,0,0.75);
-  display: flex;
-}
 nav {
   width: 100%;
   height: 50px;
@@ -125,16 +118,13 @@ video {
   }
 }
 img {
-  display: inline-block;
+  display: block;
   width: 30%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: auto; 
-  margin-bottom: auto;
+  margin: auto;
   border-radius: 30px;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 }
 .card {
-  display: block;
   margin-left: auto;
   margin-right: auto;
 }
@@ -180,4 +170,21 @@ h4 {
   padding: 10px;
   margin: 10px auto;
   text-align: center;
+}
+.img1 {
+  display: inline;
+  width: 50px;
+  margin: auto;
+  float: left;
+}
+.img2 {
+  display: inline;
+  width: 50px;
+  margin: auto;
+}
+.img3 {
+  display: inline;
+  width: 50px;
+  margin: auto;
+  float: right;
 }
