--- a/style.css
+++ b/style.css
@@ -124,6 +124,10 @@ img {
   border-radius: 30px;
   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 }
+img:hover {
+  transform: translateY(-5px);
+  transition: transform 0.3s ease;
+}
 .card {
   margin-left: auto;
   margin-right: auto;
